--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,20 +15,15 @@
     <meta property="og:description" content="Manage your finances with budgets, reports and more.">
     <meta property="og:image" content="/favicon.svg">
     <!-- Font Awesome icons loaded via menu.js -->
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-        h1, h2, h3, h4, h5, h6 { font-family: 'Roboto', sans-serif; font-weight: 700; }
-        button, .accent { font-family: 'Source Sans Pro', sans-serif; font-weight: 300; }
-    </style>
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white">
+<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter']">
     <div class="flex flex-col md:flex-row min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <section class="bg-white p-8 rounded shadow text-center mb-8">
-                <h1 class="text-4xl font-semibold mb-4 text-indigo-700">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
+                <h1 class="font-['Roboto'] text-4xl font-semibold mb-4 text-indigo-700">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
                 <p class="text-gray-700 mb-4">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
-                <a href="upload.html" class="accent inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Get Started</a>
+                <a href="upload.html" class="inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 font-['Source_Sans_Pro'] font-light">Get Started</a>
                 <p id="version" class="text-gray-500 mt-2">Version: loading...</p>
             </section>
 
@@ -48,7 +43,7 @@
             </section>
 
             <section class="mt-8 bg-white p-8 rounded-lg shadow-lg">
-                <h2 class="text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
+                <h2 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-file-upload text-indigo-600 fa-2x"></i>
