--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -14,29 +14,24 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <!-- Font Awesome icons loaded via menu.js -->
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-        h1, h2, h3, h4, h5, h6 { font-family: 'Roboto', sans-serif; font-weight: 700; }
-        button, .accent { font-family: 'Source Sans Pro', sans-serif; font-weight: 300; }
-    </style>
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
+<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter']">
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
+        <h1 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
         <p class="mb-4">Review your planned projects, explore costs and compare their priorities.</p>
 
         <section class="bg-white p-6 rounded shadow space-y-6">
             <div>
-                <h2 class="text-xl font-semibold mb-4">Budget Planning</h2>
+                <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Budget Planning</h2>
                 <div class="flex items-end space-x-4">
                     <label class="block">Annual Budget (£)<br><input type="number" id="annual-budget" class="border p-2 rounded" data-help="Total funds available"></label>
-                    <button id="apply-budget" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-filter mr-1"></i>Apply Budget</button>
+                    <button id="apply-budget" class="bg-indigo-600 text-white px-4 py-2 rounded font-['Source_Sans_Pro'] font-light"><i class="fas fa-filter mr-1"></i>Apply Budget</button>
                 </div>
             </div>
             <div>
-                <h2 class="text-xl font-semibold mb-4">Project Comparison</h2>
+                <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Project Comparison</h2>
                 <div class="flex items-end space-x-4 mb-4">
                     <label class="block">X Axis<br>
                         <select id="x-axis" class="border p-2 rounded" data-help="Field used for horizontal axis">
@@ -66,7 +61,7 @@
                 <div id="project-bubble-chart" style="height:800px" data-chart-desc="Bubble chart plotting chosen fields with bubble size representing score."></div>
             </div>
             <div>
-                <h2 class="text-xl font-semibold mb-4">Project Priorities</h2>
+                <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Project Priorities</h2>
                 <div id="projects-table"></div>
             </div>
         </section>
